@@ -1,4 +1,5 @@
-﻿- Performance improvement: deactivate options panel when not visible
+﻿- Fix sickness options panel layout not working with some panel-affecting mods
+- Performance improvement: deactivate options panel when not visible
 
 
 Version 1.4.1
